--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 # usename = ici ;
 # MONGODB_URL= 'mongodb+srv://ici:ici123456789@ici.h2hcwto.mongodb.net/';
 JWT_SECRET= somethingsecret;
+PAYPAL_CLIENT_ID="Afxq3FMPn0xarOiWNINNDfpRgo5tA8Q1r-p7WSKouR1-oB1WofvFRE7ELctdFQbhE73nNd0OhEUk_kWP";
