--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@paypal/react-paypal-js": "^8.8.3",
     "axios": "^1.8.1",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
